# apollo

./: Dockerfile  Jenkinsfile  README.md  pom.xml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
apollo/: __main__.py  config.py  job.py  model.py  rss.py  stream.py
cartierville/: __main__.py  args.py  cartierville.py  config.py  job.py  model.py  rss.py  stream.py
doc/: config.yml  template.rss
src/main/java/: module-info.java
src/main/java/scot/martin/apollo/: Main.java
src/main/java/scot/martin/apollo/function/timing/: TimeFunction.java
src/main/java/scot/martin/apollo/function/transformer/: ArgsShowFunction.java  TimeTilBroadcastFunction.java
src/main/java/scot/martin/apollo/io/: FileMover.java
src/main/java/scot/martin/apollo/io/download/: DownloadFunction.java  package-info.java
src/main/java/scot/martin/apollo/io/input/: ArgsShowFunction.java  InputStreamFunction.java  InputStreamSupplier.java  ShowSupplier.java
src/main/java/scot/martin/apollo/io/move/: WebDirectoryFunction.java
src/main/java/scot/martin/apollo/io/output/: FileNameFunction.java  FileNameSupplier.java  OutputStreamFunction.java
src/main/java/scot/martin/apollo/model/: BroadcastDownload.java  Show.java
src/main/java/scot/martin/apollo/predicate/: UpcomingShowPredicate.java
src/main/java/scot/martin/apollo/thread/: DownloadThread.java  JanitorThread.java  TelegramThread.java  package-info.java
src/main/java/scot/martin/apollo/timing/: TimeFunction.java
src/main/java/scot/martin/apollo/worker/: Downloader.java
(+10 files in other folders)
