[tool.poetry]
name = "cartierville"
version = "0.1.0"
description = "Radio stream to podcast"
authors = ["Donald AC Martin <donald@donald-martin.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pylint = "^2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
